--- a/src/FavSide/FavSide.module.css
+++ b/src/FavSide/FavSide.module.css
@@ -1,9 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+
+
+
+
 .favSide{
-width: 30%;
-background: #F8F8F8;
+  top: 0;
+  right: 0;
+  z-index: 200;
+  width: 30%;
+  background: #F8F8F8;
+  position: absolute;
+  height: 100%;
+  transition: transform 0.3s ease-out;
+
 }
+
+.mState{
+  transform: translateX(100%);
+}
+.xsState{
+  transform: translateX(100%);
+}
+.mdState {
+  transform: translateX(0%);
+}
+.open{
+  transform: translateX(0%);
+}
+.openXS{
+  width: 100%;
+}
+
+
 
 @media (min-width: 575.98px){
   .Appcontainer {
