--- a/src/Jokes/Jokes.module.css
+++ b/src/Jokes/Jokes.module.css
@@ -18,12 +18,13 @@ margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 90%;
+    width:85%;
+    padding-left: 5px;
     
 }
 
 .jokeLeftSide{
-width: 10%;
+width: 15%;
 }
 
 .linkTitle{
@@ -111,4 +112,9 @@ cursor: pointer;
 
 .messageImg{
     padding-top: 5px;
+}
+
+.footerXs{
+    flex-direction: column;
+    justify-content: space-around;
 }
