--- a/src/FavJokes/FavJokes.module.css
+++ b/src/FavJokes/FavJokes.module.css
@@ -21,3 +21,13 @@ line-height: 28px;
 
 color: #ABABAB;
 }
+
+
+.showMenu{
+display: flex;
+}
+.showMenuBtn{
+    display: flex;
+    align-self: center;
+    margin-right: 5px;
+  }
