--- a/src/mainSide/MainSide.module.css
+++ b/src/mainSide/MainSide.module.css
@@ -67,8 +67,10 @@ justify-content: space-between;
 align-items: center;
 }
 .showMenu{
+  position: absolute;
   display: flex;
   flex-direction: row;
+  right: 2px;
 }
 .showMenuBtn{
   display: flex;
