--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -23,16 +23,18 @@
   font-weight: bold;
   font-size: 32px;
   line-height: 44px;
+
 }
 .greetingSubTitle {
   font-weight: 500;
   font-size: 24px;
   line-height: 44px;
+  padding-bottom: 43px;
 }
 
 .lgState {
-  width: 50%;
-  margin-left: 50px;
+  width: 45%;
+  margin-left: 140px;
 }
 .sign {
   font-family: Roboto;
@@ -67,16 +69,18 @@
 }
 
 .header {
+  padding-top:40px;
+  padding-bottom: 78px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 .showFavSide {
-  position: absolute;
+  
   display: flex;
   flex-direction: row;
-  right: 2px;
+  
 }
 .showFavSideBtn {
   cursor:pointer;
