--- a/src/FavJokes/FavJoke/FavJoke.module.css
+++ b/src/FavJokes/FavJoke/FavJoke.module.css
@@ -43,6 +43,7 @@
     line-height: 14px;
     cursor: pointer;
     color: #8ea7ff;
+    padding-left: 3px;
   }
   .text {
     font-weight: normal;
@@ -76,4 +77,6 @@
   .messageImg {
     padding-top: 5px;
   }
-  
+  .linkImg{
+    padding-left: 6px;
+  }
