--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -52,14 +52,43 @@
   flex-direction: row;
   
 }
-.showFavSideBtn {
-  display: flex;
-  align-self: center;
-  margin-right: 5px;
-  cursor:pointer;
-}
 
 .lgState {
   width: 45%;
   margin-left: 140px;
 }
+
+.showFavSideBtn{
+  width: 28px;
+  height: 28px;
+  background: #333333;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+  margin-right: 10px;
+ 
+}
+
+.BtnIcon{
+  position: relative;
+  width: 14px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+}
+
+
+  
+
+
+
+
+
+
+
+
