--- a/src/FavJokes/FavJokes.module.css
+++ b/src/FavJokes/FavJokes.module.css
@@ -21,13 +21,47 @@
   display: flex;
   padding-top: 40px;
 }
-.showFavSideBtn {
+
+.showFavSideBtn{
+  position: relative;
+  width: 28px;
+  height: 28px;
+  background: #333333;
+  border-radius: 50%;
   display: flex;
-  align-self: center;
-  margin-right: 5px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   cursor: pointer;
+  margin-right: 10px;
 }
+
+.BtnIcon{
+  position: absolute;
+  width: 14px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  
+  transform: rotate(45deg);
+}
+.BtnIcon:nth-child(2) {
+  position: absolute;
+  width: 14px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  transform: rotate(-45deg);
+}
+
+
+
+
+
+
+
 
 .showFavSideXsMState {
   align-self: end;
 }
+
